--- a/2224/Jenkinsfile
+++ b/2224/Jenkinsfile
@@ -13,8 +13,8 @@ pipeline {
 
     environment {
         // 본인의 username으로 하실 분은 수정해주세요.
-        DOCKERHUB_USERNAME = '1pro'
-        GITHUB_URL = 'https://github.com/k8s-1pro/kubernetes-anotherclass-sprint2.git'
+        DOCKERHUB_USERNAME = 'dwinf'
+        GITHUB_URL = 'https://github.com/dwinf/kubernetes-anotherclass-sprint2.git'
 
         // [2] 잦은 배포 - versioning 무의미, 계획된 배포 - versioning 필수
         APP_VERSION = '1.0.1'
@@ -29,7 +29,7 @@ pipeline {
         stage('소스파일 체크아웃') {
             steps {
                 // 소스코드를 가져올 Github 주소
-                git branch: 'main', url: 'https://github.com/k8s-1pro/kubernetes-anotherclass-api-tester.git'
+                git branch: 'main', url: 'https://github.com/dwinf/kubernetes-anotherclass-api-tester.git'
             }
         }
 
@@ -82,7 +82,7 @@ pipeline {
             }
 
             post {
-                always {
+                always {    // 위 작업 성공 혹은 실패와 별개로 반드시 실행
                     sh "docker logout"
                 }
             }
